--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     position: relative;
     background-image: linear-gradient(to right bottom, rgba(167, 89, 111, 0.8),
     rgba(56, 78, 90, 0.8)),
-    url(./fantasy-2049567_1920.jpg);
+    url(./images/fantasy-2049567_1920.jpg);
     background-size: cover;
     background-position: top;
     clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
